@@ -12,7 +12,7 @@ use Consul;
 my $tc = eval { Test::Consul->start };
 
 SKIP: {
-    skip "consul test environment not available", 17 unless $tc;
+    skip "consul test environment not available", 27 unless $tc;
 
     my $kv = Consul->kv(port => $tc->port);
     ok $kv, "got KV API object";
@@ -40,6 +40,18 @@ SKIP: {
 
     lives_ok { $r = $kv->keys("") } "KV keys succeeded";
     is_deeply [sort @$r], [sort qw(foo bar baz)], "return KV keys are correct";
+
+    lives_ok { $r = $kv->put("foo" => 1) } "KV put succeeded";
+    ok $r, "key was updated";
+    lives_ok { $r = $kv->put("foo/bar" => 2) } "KV put succeeded";
+    ok $r, "key was updated";
+    lives_ok { $r = $kv->put("foo/bar/baz" => 3) } "KV put succeeded";
+    ok $r, "key was updated";
+
+    lives_ok { $r = $kv->get_all("foo") } "KV get_all succeeded";
+    is scalar(@$r), 3, "3 keys returned";
+    is_deeply [sort map { $_->key } @$r], [sort qw(foo foo/bar foo/bar/baz)], "return KV keys are correct";
+    is_deeply [sort map { $_->value } @$r], [sort qw(1 2 3)], "return KV values are correct";
 }
 
 done_testing;
