@@ -1,4 +1,5 @@
 {{$NEXT}}
+ - Add KV get_all endpoint method, for recursive get
 
 0.009     2015-11-19 22:17:32+11:00 Australia/Melbourne
  - Don't use defined-or, gets things working on Perl 5.8
